@@ -1,4 +1,7 @@
 Version 1.0.0
+  Enhancements:
+  - Support the new foreign data wrapper API introduced in 9.2.
+
   Bugfixes:
   - Fix uninitialized value that caused intermittent server crashes.
     Per report from Bruno Voigt.
@@ -6,7 +9,8 @@ Version 1.0.0
     be able to cause an Oracle transaction to be left open.  This also fixes
     a bug introduced in 0.9.3 that prevented Oracle errors from being
     reported as DETAIL message.  Also, all foreign scans in one local query
-    will now be executed within one Oracle transaction if possible.
+    will now be executed within one Oracle transaction if they belong to
+    the same Oracle session.
 
 Version 0.9.3 (beta), released 2012-02-07
   Enhancements:
